@@ -63,7 +63,7 @@ int PrefsParser::parseOption(char *name, char *value)
       { "geometry", NULL, PREFS_GEOMETRY },
       { "home", &prefs.home, PREFS_URL },
       { "http_language", &prefs.http_language, PREFS_STRING },
-      { "http_proxy", &prefs.http_proxy, PREFS_URL },
+      { "http_proxy", &prefs.http_proxy, PREFS_STRING },
       { "http_proxyuser", &prefs.http_proxyuser, PREFS_STRING },
       { "http_referer", &prefs.http_referer, PREFS_STRING },
       { "limit_text_width", &prefs.limit_text_width, PREFS_BOOL },
